--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,9 @@
 <resources>
-    <string name="app_name">Tasks</string>
+    <string name="app_name">ToDoList</string>
+    <string name="description">description</string>
+    <string name="title">title</string>
+    <string name="submit">submit</string>
+    <string name="add">Add</string>
+    <string name="title_hint">Title...</string>
+    <string name="description_hint">Description...</string>
 </resources>
